--- a/inicio.html
+++ b/inicio.html
@@ -107,6 +107,9 @@
 			</div>
 		</div>
 	</main>
+		
+<script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
+<script src="js/main.js"></script>
 	
 </body>
 
