--- a/card.html
+++ b/card.html
@@ -42,31 +42,26 @@
 			</nav>
 		</div>
 	</header>
-    <div class="container">
-        <div class="card-container">
-            <div class="header">
-                <a href="#">
-                <img src="img/bosque.jfif" alt="">
-                </a>
-                <h2>Alexis Sánchez</h2>
-                <h4>Desarrollador Web, Dj</h4>
-            </div>
-            <div class="descripción">
-            <p>Fecha de Nacimiento: 27/Ago/2000</p>
-            <p>Ubicación: Morelos,Zac</p>
-            <p>Redes Sociales:</p>
-            <div class="social">
-                <a href="https://www.facebook.com/pedroast276"
-                 target="_blank"><img alt="Siguenos en Facebook" 
-                 src="https://lh3.googleusercontent.com/-NSLbC_ztNls/T6VX0g6z8AI/AAAAAAAAA0A/_vyIBrmZbuY/s48/facebook48.png" width=48 height=48  /></a>
+    <div class="wrapper">
+        <div class="profile">
+            <div class="overlay">
+                <div class="about d-flex flex-column">
+                    <h4>Alexis Sánchez</h4> 
+                </div>
+                <ul class="social-icons">
+                    <li><i href="https://www.facebook.com/pedroast276"
+                        target="_blank"><img alt="Siguenos en Facebook" 
+                        src="https://lh3.googleusercontent.com/-NSLbC_ztNls/T6VX0g6z8AI/AAAAAAAAA0A/_vyIBrmZbuY/s48/facebook48.png" width=48 height=48  /></i></li>
+                    <li><i href="#"
+                        target="_blank"><img alt="Siguenos en Instagram" 
+                        src="https://cdn.pixabay.com/photo/2021/06/15/12/14/instagram-6338393_960_720.png" width=48 height=48 ></i></li>
+                    <li><i href="#"
+                        target="_blank"><img alt="Siguenos en Twitter" 
+                        src="https://play-lh.googleusercontent.com/J8k5q78xv4R8Smi4vOE6iUphLvOz0efC-0lzoyGfd0KRUlAv4ekuCtlss6KBN-tMvEw" width=48 height=48></i></li>
+                </ul>
             </div>
         </div>
     </div>
-</div>
-
-<script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
-<script src="js/main.js"></script>
-
 <div class="dx-viewport">
     <div class="demo-container">
       <div id="chart-demo">
