--- a/subir.html
+++ b/subir.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
-    <title>DevExtreme Demo</title>
+    <title>SubirVideo</title>
+
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet"> 
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
-    <meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="css/estilos.css">
-	<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet"> 
+  
 	
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script>window.jQuery || document.write(decodeURIComponent('%3Cscript src="js/jquery.min.js"%3E%3C/script%3E'))</script>
@@ -16,11 +17,12 @@
     <link rel="stylesheet" type="text/css" href="https://cdn3.devexpress.com/jslib/21.2.3/css/dx.light.css" />
     <script src="https://cdn3.devexpress.com/jslib/21.2.3/js/dx.all.js"></script>
     <link rel="stylesheet" type="text/css" href="css/estilosSubir.css" />
+    <link rel="stylesheet"  href="css/estilos.css">
     <script src="js/subir.js"></script>	
 	<title>Realidad Virtual</title>
 </head>
 <body>
-	<header>
+	<header >
 		<div class="contenedor">
 			<h2 class="logotipo">INICIO</h2>			
 			<nav>
@@ -36,4 +38,5 @@
       <div id="photo-popup"></div>
     </div>
   </body>
+</body>
 </html>
