--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+	<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>	
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="css/estilos.css">
@@ -15,28 +21,60 @@
 		</div>
 	</header>
 
-<body>
-<SCRIPT  language=JavaScript> 
-function go(){
+	<body>
 
-if (document.form.password.value=='123','111' && document.form.login.value=='Alexis272','Juanma'){ 
-        document.form.submit(); 
-    } 
-    else{ 
-         alert("Porfavor ingrese, nombre de usuario y contraseña correctos."); 
-    } 
-} 
-</SCRIPT> 
-<FORM name=form action="inicio.html">
-  
-   
-<P style="color:#00F5FF";>Usuario:    <INPUT type=text name=login> 
-<P style="color:#00F5FF";>Contraseña: <INPUT type=password name=password> 
-<INPUT onclick=go() type=button value=Acceder>
-    <nav>
-        <a ><img src="Video/PealtrexLogotipos.gif" ></a>
-    </nav>
+		<div class="container">
+			
+			<div class="d-flex justify-content-center h-100">
+				<div class="card">
+					<div class="card-header">
+						<h3>Sign In</h3>
+						<div class="d-flex justify-content-end social_icon">
+							<span><i class="fab fa-facebook-square"></i></span>
+							<span><i class="fab fa-google-plus-square"></i></span>
+							<span><i class="fab fa-twitter-square"></i></span>
+						</div>
+					</div>
+					<div class="card-body">
+						<SCRIPT  language=JavaScript> 
+							function go(){
+							
+							if (document.form.password.value=='123','111' && document.form.login.value=='Alexis272','Juanma'){ 
+									document.form.submit(); 
+								} 
+								else{ 
+									 alert("Porfavor ingrese, nombre de usuario y contraseña correctos."); 
+								} 
+							} 
+							</SCRIPT> 
+						<FORM name=form action="inicio.html">	 
+							<div class="input-group form-group">
+								<div class="input-group-prepend">
+									<span class="input-group-text"><i class="fas fa-user"></i></span><P style="color:#00F5FF";><INPUT class="form-control" placeholder="Usuario" type=text name=login>
+									</div>	
+									<div class="input-group-prepend">
+										<span class="input-group-text"><i class="fas fa-key"></i></span><P style="color:#00F5FF";><INPUT class="form-control" placeholder="password" type=password name=password> 
+									</div>	
+							</div>
+							<INPUT onclick=go() type=button value=Acceder class="btn float-right login_btn">
+								<div class="row align-items-center remember">
+								<input type="checkbox">Recordarme
+							</div>
+						</FORM>
+					</div>
+					<div class="card-footer">
+						<div class="d-flex justify-content-center links">
+							¿No tienes una cuenta?<a href="#">crear Usuario</a>
+						</div>
+						<div class="d-flex justify-content-center">
+							<a href="#">¿Olvidaste tu contraseña?</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</body>
 
-</FORM> 
-</body>
+
+
 </html>
