--- a/card.html
+++ b/card.html
@@ -46,7 +46,10 @@
         <div class="profile">
             <div class="overlay">
                 <div class="about d-flex flex-column">
-                    <h4>Alexis Sánchez</h4> 
+                    <h4>Alexis Sánchez <br><br>
+                        <p style="color:#00f7ff";>Años:</p><p>21</p>
+                        <p style="color:#00f7ff";>Fecha Nacimiento:</p><p>27/08/2000</p>
+                    </h4> 
                 </div>
                 <ul class="social-icons">
                     <li><i href="https://www.facebook.com/pedroast276"
@@ -58,10 +61,34 @@
                     <li><i href="#"
                         target="_blank"><img alt="Siguenos en Twitter" 
                         src="https://play-lh.googleusercontent.com/J8k5q78xv4R8Smi4vOE6iUphLvOz0efC-0lzoyGfd0KRUlAv4ekuCtlss6KBN-tMvEw" width=48 height=48></i></li>
-                </ul>
-            </div>
+                </ul>       
+            </div>  
         </div>
+        <p style="color:#00f7ff";>
+            ______________________
+            <br>
+            DATOS GENERALES 
+            <br>
+            ______________________
+         </p>
+         <p style="color:#00f7ff";>
+            <br>
+           | DESCRIPCIÓN :
+            <br>
+           | UBICACIÓN:
+         </p>
+         <p style="color:#faf6f6";>
+            <br>
+            Autor , DJ , Desarrollador de Software
+            <br>
+             Morelos,Zac.
+            <br>
+        </p>
     </div>
+    <p style="color:#00f7ff";>
+        _______________________________________| ACTIVIDAD EN LA PAGINA |__________________________________________
+        </p>
+
 <div class="dx-viewport">
     <div class="demo-container">
       <div id="chart-demo">
