--- a/index.html
+++ b/index.html
@@ -7,9 +7,22 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 
+
+	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
+    <link href='https://unpkg.com/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
+	<link
+	rel="stylesheet"
+	href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+	integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
+	crossorigin="anonymous"
+  />
+
+
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="css/estilos.css">
+	
+    <link rel="stylesheet" href="css/estilosBaja.css">
 	<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet"> 
 	<title>Realidad Virtual</title>
 </head>
@@ -43,7 +56,7 @@
 									document.form.submit(); 
 								} 
 								else{ 
-									 alert("Porfavor ingrese, nombre de usuario y contraseña correctos."); 
+									 alert("Porfavor ingrese, nombre de usuario y contraseña validos."); 
 								} 
 							} 
 							</SCRIPT> 
@@ -53,10 +66,10 @@
 									<span class="input-group-text"><i class="fas fa-user"></i></span><P style="color:#00F5FF";><INPUT class="form-control" placeholder="Usuario" type=text name=login>
 									</div>	
 									<div class="input-group-prepend">
-										<span class="input-group-text"><i class="fas fa-key"></i></span><P style="color:#00F5FF";><INPUT class="form-control" placeholder="password" type=password name=password> 
+										<span class="input-group-text"><i class="fas fa-key"></i></span><P style="color:#00F5FF";><INPUT class="form-control" placeholder="Contraseña" type=password name=password> 
 									</div>	
 							</div>
-							<INPUT onclick=go() type=button value=Acceder class="btn float-right login_btn">
+							<INPUT onclick=go() type=button  class="btn float-right login_btn" value=Acceder>
 								<div class="row align-items-center remember">
 								<input type="checkbox">Recordarme
 							</div>
@@ -73,8 +86,50 @@
 				</div>
 			</div>
 		</div>
+
+		<section>
+			<div class="imagen-light">
+				<img src="img/close.svg" alt="" class="close">
+				<img src="" alt="" class="agregar-imagen">
+			</div>
+	
+			<section class="contenedor" id="expertos">
+				<h2 class="subtitulo">Acerca de la Empresa</h2>
+				<section class="experts">
+	
+					<div class="cont-expert">
+						<img src="img/pie_chart.svg" alt="">
+						<h3 class="n-expert">Diseño y Desarrollo</h3>
+					</div>
+					<div class="cont-expert">
+						<img src="img/search_engine.svg" alt="">
+						<h3 class="n-expert">Videos</h3>
+					</div>
+					<div class="cont-expert">
+						<img src="img/security.svg" alt="">
+						<h3 class="n-expert">Seguridad</h3>
+					</div>
+				</section>
+			</section>
+		</main>
+	</section>
+		<footer id="contact">
+			<div class="contenedor footer-content">
+					<div class="contact-us">
+						<h2 class="brand">PEALTREX</h2>
+						<p>Somos expertos en la codificaión de tus sueños</p>
+						<p>-Pedro Alexis Sánchez De La Torre</p>
+					</div>
+					<div class="social-media">
+						<a href="https://www.facebook.com/pedroast276" class="social-media-icon" >
+							<i class='bx bxl-facebook'></i>
+						</a>
+						  <a href="https://www.instagram.com/pedroast_27_xd_/" class="social-media-icon">
+							<i class='bx bxl-instagram' ></i>
+						</a>
+					</div>
+			</div>
+			<div class="line"></div>
+		</footer>
 	</body>
-
-
-
 </html>
