--- a/inicio.html
+++ b/inicio.html
@@ -1,23 +1,29 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+<html lang="en">
 <head>
+	<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+	<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>	
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+
+
+	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
+    <link href='https://unpkg.com/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
+	<link
+	rel="stylesheet"
+	href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+	integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
+	crossorigin="anonymous"
+  />
+
+
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="css/estilos.css">
+	
+    <link rel="stylesheet" href="css/estilosBaja.css">
 	<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet"> 
-	
-	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script>window.jQuery || document.write(decodeURIComponent('%3Cscript src="js/jquery.min.js"%3E%3C/script%3E'))</script>
-    <link rel="stylesheet" type="text/css" href="https://cdn3.devexpress.com/jslib/21.2.3/css/dx.common.css" />
-    <link rel="stylesheet" type="text/css" href="https://cdn3.devexpress.com/jslib/21.2.3/css/dx.light.css" />
-    <script src="https://cdn3.devexpress.com/jslib/21.2.3/js/dx.all.js"></script>
-    <script src="js/dataGrafica.js"></script>
-  
-    <script src="js/dataGrafica.js"></script>
-	
 	<title>Realidad Virtual</title>
 </head>
 <body>
@@ -111,6 +117,60 @@
 <script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
 <script src="js/main.js"></script>
 	
+
+
+
+<section>
+	<div class="imagen-light">
+		<img src="img/close.svg" alt="" class="close">
+		<img src="" alt="" class="agregar-imagen">
+	</div>
+
+	<section class="contenedor" id="expertos">
+		<h2 class="subtitulo">Acerca de la Empresa</h2>
+		<section class="experts">
+
+			<div class="cont-expert">
+				<img src="img/pie_chart.svg" alt="">
+				<h3 class="n-expert">Diseño y Desarrollo</h3>
+			</div>
+			<div class="cont-expert">
+				<img src="img/search_engine.svg" alt="">
+				<h3 class="n-expert">Videos</h3>
+			</div>
+			<div class="cont-expert">
+				<img src="img/security.svg" alt="">
+				<h3 class="n-expert">Seguridad</h3>
+			</div>
+		</section>
+	</section>
+</main>
+</section>
+<footer id="contact">
+	<div class="contenedor footer-content">
+			<div class="contact-us">
+				<h2 class="brand">PEALTREX</h2>
+				<p>Somos expertos en la codificaión de tus sueños</p>
+				<p>-Pedro Alexis Sánchez De La Torre</p>
+			</div>
+			<div class="social-media">
+				<a href="https://www.facebook.com/pedroast276" class="social-media-icon" >
+					<i class='bx bxl-facebook'></i>
+				</a>
+				  <a href="https://www.instagram.com/pedroast_27_xd_/" class="social-media-icon">
+					<i class='bx bxl-instagram' ></i>
+				</a>
+			</div>
+	</div>
+	<div class="line"></div>
+</footer>
+
+
+
+
+
 </body>
+
+
 
 </html>
