--- a/subir.html
+++ b/subir.html
@@ -10,7 +10,6 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
   
-	
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script>window.jQuery || document.write(decodeURIComponent('%3Cscript src="js/jquery.min.js"%3E%3C/script%3E'))</script>
     <link rel="stylesheet" type="text/css" href="https://cdn3.devexpress.com/jslib/21.2.3/css/dx.common.css" />
@@ -22,21 +21,22 @@
 	<title>Realidad Virtual</title>
 </head>
 <body>
-	<header >
-		<div class="contenedor">
-			<h2 class="logotipo">INICIO</h2>			
-			<nav>
-				<a href="inicio.html">INICIO</a>
-				<a href="card.html" >PERFIL</a>
-				<a href="index.html">CERRAR SESIÓN</a>
-			</nav>
-		</div>
-	</header>
-  <body class="dx-viewport">
+  <header>
+  <div class="contenedor">
+    <h2 class="logotipo">INICIO</h2>			
+    <nav>
+      <a href="inicio.html">INICIO</a>
+      <a href="card.html" >PERFIL</a>
+              <a href="">|</a>
+      <a href="index.html">CERRAR SESIÓN</a>
+    </nav>
+  </div>
+</header>
+  <div class="dx-viewport">
     <div class="demo-container">
       <div id="file-manager"></div>
       <div id="photo-popup"></div>
     </div>
-  </body>
+  </div>
 </body>
 </html>
