--- a/inicio.html
+++ b/inicio.html
@@ -151,7 +151,10 @@
 			<div class="contact-us">
 				<h2 class="brand">PEALTREX</h2>
 				<p>Somos expertos en la codificaión de tus sueños</p>
-				<p>-Pedro Alexis Sánchez De La Torre</p>
+				<p>-Pedro Alexis Sánchez De La Torre
+					<br>
+					-Juan Manuel
+				</p>
 			</div>
 			<div class="social-media">
 				<a href="https://www.facebook.com/pedroast276" class="social-media-icon" >
